--- a/html.html
+++ b/html.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefas</title>
 </head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<script  src="scriptdark.js" defer></script>
+<link rel="stylesheet" href="styledark.css">
+<link rel="stylesheet" href="fontes.css">
 
 <style>
    * {
@@ -12,10 +16,11 @@
     margin: 0;
     box-sizing: border-box;
 }
+.hi {
 
-.container {
-    height: 100vh;
-    width: 100vw;
+}
+
+.container { 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -89,6 +94,18 @@ img {
 }
 </style>
 <body>
+    <div>
+        <input type="checkbox" name="change-theme" id="change-theme">
+        <label for="change-theme">
+            <i class="bi bi-brightness-high"></i>
+            <i class="bi bi-moon"></i>
+        </label>
+    </div>
+
+    <div>   
+
+        <h1>Lista de Tarefas</h1>
+       
     <div class="container">
         <div class="caixa">
             <div>
@@ -103,6 +120,7 @@ img {
             </div>
         
     </div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
