--- a/html.html
+++ b/html.html
@@ -6,7 +6,7 @@
     <title>Tarefas</title>
 </head>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-<script  src="scriptdark.js" defer></script>
+
 <link rel="stylesheet" href="styledark.css">
 <link rel="stylesheet" href="fontes.css">
 
@@ -15,9 +15,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-.hi {
-
 }
 
 .container { 
@@ -93,14 +90,17 @@ img {
     text-decoration: line-through;
 }
 </style>
-<body>
-    <div>
+<body class="dark">
+    <header>
+        <div>
         <input type="checkbox" name="change-theme" id="change-theme">
         <label for="change-theme">
             <i class="bi bi-brightness-high"></i>
             <i class="bi bi-moon"></i>
         </label>
     </div>
+    </header>
+    
 
     <div>   
 
@@ -122,5 +122,6 @@ img {
     </div>
 </div>
     <script src="script.js"></script>
+    <script  src="scriptdark.js"></script>
 </body>
 </html>
