--- a/html.html
+++ b/html.html
@@ -103,6 +103,19 @@ img {
             </div>
         
     </div>
+
+    <div style="margin-top: 20px; width: 100%;">
+        <div style="display: flex; align-items: center;">
+            <div id="progress-bar" style="width: 80%; height: 20px; background-color: #f1f1f1; border: 1px solid black; border-radius: 5px; overflow: hidden;">
+                <div id="progress-fill" style="height: 100%; width: 0%; background-color: aquamarine; transition: width 0.3s;"></div>
+            </div>
+            <span id="progress-text" style="margin-left: 10px; font-family: Arial, sans-serif; font-size: 14px;">0 / 0 tarefas concluídas</span>
+        </div>
+    </div>
+    
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
