--- a/home2.html
+++ b/home2.html
@@ -34,7 +34,7 @@
                     </a>
                 </div>
                 <li>Emilly Damasceno Walter - (44) 9845-9139</li>
-                <div>
+                <div class="">
                     <a href="https://wa.me/qr/EIYOEJAW3FY2L1">
                         <i class="fa fa-whatsapp"></i>
                     </a>
